--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <form action="" method="POST">
+      <form action="/mailhandler" method="POST">
         <label for="myMail">
           <strong> Subscribe to our newsletter</strong>
         </label>
