--- a/client/static/style.css
+++ b/client/static/style.css
@@ -1,10 +1,11 @@
 body {
   font-size: 1.5rem;
-  background-color: brown;
+  background-color: #912623;
+  text-align: center;
 }
 
 .container {
-  background-color: #e7e7e7;
+  background-color: #f1f2f3;
   margin-top: 10rem;
   padding: 2rem;
   display: flex;
@@ -20,10 +21,20 @@ input {
 
 button {
   padding: 1rem;
-  margin-bottom: 10rem;
+  margin-bottom: 5rem;
 }
 
 form {
   display: flex;
   flex-direction: column;
+  text-align: center;
+}
+
+.loading {
+  margin: auto;
+  max-width: 50%;
+}
+
+.charge {
+  display: none;
 }
