--- a/client/templates/nice.html
+++ b/client/templates/nice.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Success</title>
   </head>
   <body>
-    <p>{{data}}</p>
-    <p>{{score}}</p>
-    <p>{{validate}}</p>
+    Thank you!! {{user}} The mail with your data has been sent :)!
   </body>
 </html>
