--- a/client/static/style.css
+++ b/client/static/style.css
@@ -1,4 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
 body {
+  font-family: "Roboto", sans-serif;
   font-size: 1.5rem;
   background-color: #912623;
   text-align: center;
@@ -10,7 +13,7 @@ body {
   padding: 2rem;
   display: flex;
   flex-direction: column;
-  max-width: 20rem;
+  max-width: 30rem;
   margin: 0 auto;
 }
 
@@ -21,7 +24,7 @@ input {
 
 button {
   padding: 1rem;
-  margin-bottom: 5rem;
+  margin-bottom: 4rem;
 }
 
 form {
@@ -37,4 +40,21 @@ form {
 
 .charge {
   display: none;
+}
+
+.footer {
+  margin-top: 60%;
+  display: block;
+  color: white;
+  font-size: 1rem;
+  text-decoration: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover {
+  color: #e7e7e7;
 }
