--- a/client/templates/invalid.html
+++ b/client/templates/invalid.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Success</title>
-  </head>
-  <body>
-    There was an error in your request. Maybe your e-mail is not correct! :(
-  </body>
-</html>
+{% extends "template.html" %} {% block content %} There was an error in your
+request. Maybe your e-mail is not correct! :(
+<p>
+  <a href="/"><button>Try again</button> </a>
+</p>
+{% endblock %}
