--- a/client/templates/nice.html
+++ b/client/templates/nice.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Success</title>
-  </head>
-  <body>
-    Thank you!! {{user}} The mail with your data has been sent :)!
-  </body>
-</html>
+{% extends "template.html" %} {% block content %} Thank you!!<strong
+  >{{user}}
+</strong>
+The mail with your data has been sent :)!
+<p>
+  <a href="/"><button>Go back</button> </a>
+
+  {{data}}
+</p>
+{% endblock %}
