email validation fixex

--- a/client/templates/invalid.html
+++ b/client/templates/invalid.html
@@ -1,5 +1,5 @@
 {% extends "template.html" %} {% block content %} There was an error in your
-request. Maybe your e-mail is not correct! :(
+request. Maybe your e-mail is not correct! or it doesnt EXIST! :(
 <p>
   <a href="/"><button>Try again</button> </a>
 </p>
